# ecommerce

./: .gitignore  Pipfile  pyproject.toml  readme.md  requirements.txt
ecommerce/: local.sample.py  settings.py  urls.py
ecommerce/catalogue/: forms.py  models.py  search_handlers.py  views.py
ecommerce/catalogue/migrations/: 0020_product_new_arrival.py  0021_product_shot_description.py  0022_auto_20200614_0620.py  0023_auto_20200614_0824.py  0024_auto_20200614_0944.py  0025_auto_20200614_0948.py  0026_auto_20200614_0950.py  0027_auto_20200618_0413.py  0028_auto_20200618_0414.py  0029_auto_20200628_0734.py  0030_auto_20200628_0736.py  0031_auto_20200702_0753.py  0032_auto_20200708_0914.py
ecommerce/core/: admin.py  context_processors.py  hyper_blocks.py  models.py  oscar_settings.py  views.py
ecommerce/core/api/: views.py
ecommerce/core/management/commands/: initialize.py  populate_email_templates.py
ecommerce/core/migrations/: 0007_seo.py
ecommerce/customer/: utils.py
ecommerce/dashboard/catalogue/: forms.py  views.py
ecommerce/dashboard/extensions/: app.py
ecommerce/flatpages/: middleware.py
ecommerce/offer/: __init__.py  config.py  models.py
ecommerce/offer/migrations/: 0008_conditionaloffer_banner.py
ecommerce/shipping/: __init__.py  config.py  repository.py
ecommerce/templates/: base.html
ecommerce/templates/themes/theme_1/: layout_2_col.html
ecommerce/templates/themes/theme_2/: layout.html
ecommerce/templates/themes/theme_3/: layout.html  layout_2_new.html
ecommerce/templates/themes/theme_6/: layout_2_col.html  layout_2_new.html
(+114 files in other folders)
